--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"google-auth-library": "^9.15.1",
 		"googleapis": "^149.0.0",
+		"jose": "^6.0.11",
 		"nuxt": "^3.17.4",
 		"vue": "^3.5.15",
 		"vue-router": "^4.5.1"
